# dynamic-onecommon

./: .gitignore  README.md  pyproject.toml
webapp/: README.md  pyproject.toml
webapp/cocoa/core/: controller.py  dataset.py  event.py  scenario_db.py  util.py
webapp/cocoa/model/: evaluate.py  generator.py  ngram.py  util.py  vocab.py
webapp/cocoa/sessions/: human_session.py  session.py  timed_session.py
webapp/cocoa/systems/: human_system.py
webapp/cocoa/turk/: task.py
webapp/cocoa/web/: __init__.py
webapp/cocoa/web/main/: backend.py  db_reader.py  states.py  utils.py
webapp/cocoa/web/views/: chat.py
webapp/scripts/turk/: collect_dialogue.py  review_results.py  sandbox_results.py
webapp/src/: run_sample.sh
webapp/src/core/: controller.py  event.py  inverse_lexicon.py  kb.py  lexicon.py  scenario.py  tokenizer.py
webapp/src/data/: admin_spatio_temporal_annotation.json  admin_target_selection_annotation.json  model_target_selection_annotation.json  selfplay_transcripts.json
webapp/src/web/: app_params.json  chat_app.py
webapp/src/web/main/: backend.py  db_reader.py  utils.py
webapp/src/web/static/: mturk_sample.ai
webapp/src/web/templates/: annotation_list.html  chat.html  chat_list.html  finished.html  instructions.html  main.html  sample_chat.html  simple_chat_list.html  simple_visualize.html  spatio_temporal.html  target_selection.html  task_survey.html  visualize.html  waiting.html  worker_info.html  worker_list.html
webapp/src/web/views/: action.py  admin.py  annotation.py  dataset.py  main.py  selfplay.py  tutorial.py  worker.py
(+87 files in other folders)
