[tool.poetry]
name = "dynamic-onecommon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
scipy = "^1.5.1"
matplotlib = "^3.2.2"
tqdm = "^4.47.0"
boto3 = "^1.14.49"
nltk = "^3.5"
seaborn = "^0.11.0"
plotly = "^4.10.0"
torch = "1.3.1"
tensorflow = "1.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"